# SKT

./: LICENSE.md  README.md
hw/: .gitignore  Makefile  README.md  binary_container_1-krnl_skt_stream-compile.cfg  binary_container_1-link.cfg  build_host  build_krnl  common-config.cfg  krnl_skt_stream-compile.cfg  krnl_skt_stream-link.cfg  skt_stream.run
hw/src/: bit_utils.hpp  distr.hpp  hashes.hpp  hls_skt_krnl.cpp  krnl_skt_stream.cpp  skt_stream.cpp  skt_stream.hpp  streaming.hpp
sw/: README.md
sw/src/: CMakeLists.txt  hash.hpp  sketch_fileclient.cpp  sketch_tcp_client.cpp  sketch_tcp_fileclient.cpp  sketch_tcp_server.cpp  skt.cpp  skt.hpp  skt_base.cpp  skt_bench.cpp  txt2bin.cpp
